# NiaServer-Core

./: .gitignore  .gitmodules  CHANGELOG-PRE.md  CHANGELOG.md  README-EN.md  README.md  world_behavior_packs.json  world_resource_packs.json
.github/ISSUE_TEMPLATE/: bug-反馈.md  bug_report.md  feature_request.md  新功能建议.md
.github/workflows/: main.yml  pre-build.yml  pre-release.yml  release.yml
NIA-Server/: config.json  index.js  package-lock.json  package.json
NIA-Server-BOT/: index.html  index.js  market.json  package-lock.json  package.json  test.js
NIAHttpBOT/: CMakeLists.txt
NIAHttpBOT/I18N/: ar_SA.lang  en_US.lang  es_ES.lang  fr_FR.lang  it_IT.lang  ja_JP.lang  ru_RU.lang  zh_CN.lang
NIAHttpBOT/lib/: libcrypto.lib  libssl.lib
NIAHttpBOT/src/: CFG_Parser.hpp  CommandListener.cpp  CommandListener.h  File_API.cpp  File_API.h  Game_API.cpp  Game_API.h  I18Nize.hpp  Logger.hpp  NIAHttpBOT.cpp  QQBot.cpp  QQBot.h  QQBot_API.cpp  QQBot_API.h  en_US.lang
development_behavior_packs/NIA_V4.0_BP/: manifest.json  package-lock.json  package.json
development_behavior_packs/NIA_V4.0_BP/blocks/: dark_dirt.json  random_ore.json
development_behavior_packs/NIA_V4.0_BP/entities/: npc.json
development_behavior_packs/NIA_V4.0_BP/feature_rules/: island_bottom_rule.json  island_top_dirt.json  island_top_grass.json  island_top_rule.json
development_behavior_packs/NIA_V4.0_BP/features/: dirt.json  grass.json  island_bottom.json  island_top.json  stone.json
development_behavior_packs/NIA_V4.0_BP/functions/: main.mcfunction  show.mcfunction  tick.json
development_behavior_packs/NIA_V4.0_BP/items/: dark_bottle.json  dark_crystal.json  dark_gem.json  dark_ore.json  dark_sword.json  fire_bottle.json  fire_crystal.json  fire_gem.json  fire_ore.json  fire_sword.json  nihility_bottle.json  nihility_crystal.json  nihility_gem.json  nihility_ore.json  nihility_sword.json  op_sword.json  rock_bottle.json  rock_crystal.json  rock_gem.json  rock_ore.json  rock_sword.json  spirit_bottle.json  spirit_crystal.json  spirit_gem.json  spirit_ore.json  spirit_sword.json  thunder_bottle.json  thunder_crystal.json  thunder_gem.json  thunder_ore.json  thunder_sword.json  water_bottle.json  water_crystal.json  water_gem.json  water_ore.json  water_sword.json  wind_bottle.json  wind_crystal.json  wind_gem.json  wind_ore.json  (+1 more)
development_behavior_packs/NIA_V4.0_BP/scripts/: basic.js  chat.js  checkupdate.js  config.js  customFunction.js  island.js  land.js  log.js  main.js  market.js  net.js  newFunction.js  oxygen.js  qqBot.js  shop.js  test.js
development_behavior_packs/NIA_V4.0_BP/structures/: bottle.mcstructure  forest.mcstructure  hell1.mcstructure
development_behavior_packs/NiaServer-Core-BP/: manifest.json
development_behavior_packs/NiaServer-Core-BP/scripts/: AntiCheats.js  basic.js  chat.js  checkupdate.js  config.js  customFunction.js  event_log.js  land.js  log.js  main.js  market.js  playertitle.js  qqBot.js
development_behavior_packs/NiaServer-Core-BP/structures/: bamboo.mcstructure  catcoffee.mcstructure  island1.mcstructure  island2.mcstructure  ore.mcstructure  poorisland.mcstructure  sea.mcstructure  stone.mcstructure
development_resource_packs/NIA_V4.0_RP/: README.md  blocks.json  manifest.json
development_resource_packs/NiaServer-Core-RP/: README.md  manifest.json
development_resource_packs/particles/: basic.particle.json
plugins/: KillItem.js  NBan.js
(+65 files in other folders)
